force-app/main/default/objects/Quote__c/fields/Quote_Pic__c.field-meta.xml
<CustomField>
    <fullName>Quote_Pic__c</fullName>
    <label>Quote Pic</label>
    <type>Url</type>
</CustomField>