force-app/main/default/objects/Quote__c/fields/Quote_Topic__c.field-meta.xml
<CustomField>
    <fullName>Quote_Topic__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Topic</label>
    <referenceTo>Quote_Topic__c</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>